# astop

./: README.md  pyproject.toml
src/astop/: __main__.py  app.py  cli.py  utils.py
src/astop/collectors/: battery.py  cpu.py  disk.py  memory.py  network.py  powermetrics.py  processes.py  soc_info.py
src/astop/styles/: app.tcss
src/astop/widgets/: ane_panel.py  base_panel.py  cpu_panel.py  gpu_panel.py  graph.py  io_panel.py  memory_panel.py  power_panel.py  process_table.py
