[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astop"
version = "0.1.0"
description = "Terminal-based Apple Silicon system monitor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["apple-silicon", "system-monitor", "terminal", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
astop = "astop.cli:main"

[tool.hatch.build.targets.sdist]
include = ["src/astop"]

[tool.hatch.build.targets.wheel]
packages = ["src/astop"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
